--- a/local.yml
+++ b/local.yml
@@ -1,10 +1,8 @@
  ---
  - hosts: localhost
    connection: local
-   become: true
- 
    tasks:
-   - name: install htop
-     community.general.pacman:
-       name: htop
-       state: present
+     - name: Create a file called '/tmp/testfile.txt' with the content 'hello world'.
+       copy:
+         content: hello worldn
+         dest: /tmp/testfile.txt
